# met0310_av

./: .gitmodules  aitab.gitignore  eval.txt  fail  fail.txt  koer.txt  koer2  mida  test
liisa_r2d2/: mainpage.dox  manifest.xml
liisa_r2d2/urdf/: r2d2.urdf  vana kood
src/beginner_tutorials/: .CMakeLists.txt.swj  .CMakeLists.txt.swl  .CMakeLists.txt.swm  .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
src/beginner_tutorials/scripts/: .add_two_ints_server.py.swp  .talker.py.swp
src/liisa_r2d2/: CMakeLists.txt  package.xml
src/liisa_r2d2/config/: r2d2.rviz
src/liisa_r2d2/launch/: r2d2.launch
src/liisa_r2d2/urdf/: r2d2.urdf.xacro
src/map/: mymap.pgm
src/my_gazebo/: CMakeLists.txt  package.xml
src/my_gazebo/launch/: .turtlebot3_slam.launch.swp  my_gazebo.launch  my_move_base.launch  r2d2_nav.launch  teleop_key_control.launch  turtlebot3_gmapping.launch  turtlebot3_slam.launch
src/my_gazebo/map/: gazebo_map.pgm
src/my_gazebo/models/my_world/: model.sdf
src/my_gazebo/param/: costmap_common_params_r2d2.yaml
src/my_gazebo/src/: r2d2_teleop_key.py
src/my_gazebo/urdf/: r2d2.urdf.xacro
src/my_gazebo/worlds/: my_world.world
src/r2d2_navigator/: package.xml
